--- a/app/views/runs/_run.html.erb
+++ b/app/views/runs/_run.html.erb
@@ -1,9 +1,9 @@
 <div class="py-6">
-  <div class="flex flex-wrap-reverse gap-4 items-center">
+  <div class="flex flex-wrap-reverse items-center gap-4">
     <% unless current_page?(run_path(run)) %>
       <%= link_to run.user, data: { turbo: false }, class: 'group flex gap-4 items-center mr-auto' do %>
         <%= image_tag run.user.avatar.variant(resize_to_limit: [50, 50]).processed, class: 'size-12 rounded-lg drop-shadow-lg dark:drop-shadow-none object-cover' if run.user.avatar.attached? %>
-        <p class="subheading group-hover:text-indigo-600 dark:group-hover:text-indigo-500 transition ease-in-out duration-300">
+        <p class="transition duration-300 ease-in-out subheading group-hover:text-indigo-600 dark:group-hover:text-indigo-500">
           <%= run.user.default_name %>
         </p>
       <% end %>
