--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,13 +17,13 @@
     </script>
   </head>
 
-  <body class='text-slate-800 dark:text-slate-100 selection:bg-indigo-500/40 bg-white dark:bg-slate-900 font-normal leading-normal antialiased relative'>
+  <body class='relative antialiased font-normal leading-normal bg-white text-slate-800 dark:text-slate-100 selection:bg-indigo-500/40 dark:bg-slate-900'>
     <%= render "shared/flash" if user_signed_in? ? current_user.settings(:notifications).in_app : true %>
-    <div class="w-full flex h-svh max-h-svh">
+    <div class="flex w-full h-svh max-h-svh">
       <%= render "shared/sidebar" if user_signed_in? %>
-      <div class="flex h-full flex-1 flex-col min-w-0">
-        <div class="flex h-full flex-col justify-between overflow-y-scroll min-w-0">
-          <main class="container mx-auto my-24 px-5">
+      <div class="flex flex-col flex-1 h-full min-w-0">
+        <div class="flex flex-col justify-between h-full min-w-0 overflow-y-scroll">
+          <main class="container px-5 mx-auto my-24">
             <%= yield %>
           </main>
         </div>
