--- a/app/views/runs/new.html.erb
+++ b/app/views/runs/new.html.erb
@@ -1,5 +1,5 @@
-<div class="max-w-3xl mx-auto px-4 my-16">
-  <div class="mb-4 pb-6 border-b border-slate-200 dark:border-slate-700">
+<div class="max-w-3xl px-4 mx-auto my-16">
+  <div class="pb-6 mb-4 border-b border-slate-200 dark:border-slate-700">
     <h1 class="heading">New Run</h1>
   </div>
 
