--- a/app/views/runs/show.html.erb
+++ b/app/views/runs/show.html.erb
@@ -1,9 +1,9 @@
-<div class="max-w-3xl mx-auto px-4 my-16">
+<div class="max-w-3xl px-4 mx-auto my-16">
   <div class="pb-6 border-b border-slate-200 dark:border-slate-700">
-    <div class="flex flex-wrap gap-4 items-center">
+    <div class="flex flex-wrap items-center gap-4">
       <%= link_to @run.user, class: 'group flex gap-4 items-center mr-auto' do %>
         <%= image_tag @run.user.avatar.variant(resize_to_limit: [100, 100]).processed, class: 'size-16 rounded-lg drop-shadow-lg dark:drop-shadow-none object-cover' if @run.user.avatar.attached? %>
-        <h1 class="heading group-hover:text-indigo-600 dark:group-hover:text-indigo-500 transition ease-in-out duration-300">
+        <h1 class="transition duration-300 ease-in-out heading group-hover:text-indigo-600 dark:group-hover:text-indigo-500">
           <%= @run.user.default_name %>
         </h1>
       <% end %>
