--- a/app/views/search/index.turbo_stream.erb
+++ b/app/views/search/index.turbo_stream.erb
@@ -6,7 +6,7 @@
         <%= render 'users/user_list', users: @users if @users.present? %>
       </div>
     <% else %>
-      <div class="flex flex-col gap-6 items-center justify-center py-12">
+      <div class="flex flex-col items-center justify-center gap-6 py-12">
         <%= content_tag(:p, @query.present? ? 'No results found.' : 'Start typing to find teams or other members.', class: 'prose dark:prose-invert text-soft text-center') %>
       </div>
     <% end %>
