--- a/app/views/teams/forms/_edit_team.html.erb
+++ b/app/views/teams/forms/_edit_team.html.erb
@@ -1,4 +1,4 @@
-<div class="mt-10 mb-6 pb-6 border-b dark:border-slate-700 space-y-2">
+<div class="pb-6 mt-10 mb-6 space-y-2 border-b dark:border-slate-700">
   <h1 class="heading">Edit Team</h1>
   <p class="text-soft">Edit your team's details.</p>
 </div>
