--- a/app/views/teams/forms/_form.html.erb
+++ b/app/views/teams/forms/_form.html.erb
@@ -18,7 +18,7 @@
   <div class="form-group">
     <%= form.label :name, class: 'form-label' %>
     <%= form.text_field :name, autofocus: true, class: 'form-input', data: { form_validation_target: 'teamName', action: 'input->form-validation#validateTeamName' } %>
-    <span class="error-message hidden my-1" data-form-validation-target="teamNameError">Name cannot be blank</span>
+    <span class="hidden my-1 error-message" data-form-validation-target="teamNameError">Name cannot be blank</span>
   </div>
 
   <div class="form-group">
@@ -28,8 +28,8 @@
       </p>
     <% end %>
     <%= form.text_area :description, placeholder: 'Add a description...', class: 'form-input', data: { controller: 'autogrow', form_validation_target: 'teamDescription', action: 'input->autogrow#grow input->form-validation#validateTeamDescription' } %>
-    <span class="error-message hidden my-1" data-form-validation-target="teamDescriptionError">Description must be 500 characters or less</span>
-    <p class="help-text my-1">Maximum 500 characters</p>
+    <span class="hidden my-1 error-message" data-form-validation-target="teamDescriptionError">Description must be 500 characters or less</span>
+    <p class="my-1 help-text">Maximum 500 characters</p>
   </div>
 
   <% unless form.object.new_record? %>
@@ -70,7 +70,7 @@
       </p>
     <% end %>
     <%= form.date_field :season_end_date, value: form.object.new_record? ? nil : @team.season_end_date, class: 'form-input', data: { form_validation_target: "seasonEndDate", action: "input->form-validation#validateSeasonEndDate" } %>
-    <span class="error-message hidden my-1" data-form-validation-target="seasonEndDateError">Season end date must be after season start date</span>
+    <span class="hidden my-1 error-message" data-form-validation-target="seasonEndDateError">Season end date must be after season start date</span>
   </div>
 
   <div class="form-group">
@@ -80,8 +80,8 @@
       </p>
     <% end %>
     <%= form.number_field :mileage_goal, step: 1, min: 0, class: 'form-input', data: { form_validation_target: "mileageGoal", action: "input->form-validation#validateMileageGoal" } %>
-    <span class="error-message hidden my-1" data-form-validation-target="milageGoalError">Mileage goal must be a positive number</span>
-    <p class="help-text my-1">Set a goal for how many miles you want your team to run collectively during the season.</p>
+    <span class="hidden my-1 error-message" data-form-validation-target="milageGoalError">Mileage goal must be a positive number</span>
+    <p class="my-1 help-text">Set a goal for how many miles you want your team to run collectively during the season.</p>
   </div>
 
   <div class="form-group">
@@ -91,11 +91,11 @@
       </p>
     <% end %>
     <%= form.number_field :long_run_goal, step: 1, min: 0, class: 'form-input', data: { form_validation_target: 'mileageGoal', action: 'input->form-validation#validateMileageGoal' } %>
-    <span class="error-message hidden my-1" data-form-validation-target="milageGoalError">Long run goal must be a positive number</span>
-    <p class="help-text my-1">Set a goal for how many long runs you want your team to run collectively during the season.</p>
+    <span class="hidden my-1 error-message" data-form-validation-target="milageGoalError">Long run goal must be a positive number</span>
+    <p class="my-1 help-text">Set a goal for how many long runs you want your team to run collectively during the season.</p>
   </div>
 
-  <div class="flex items-center justify-start flex-wrap gap-6">
+  <div class="flex flex-wrap items-center justify-start gap-6">
     <% if form.object.new_record? %>
       <%= form.submit 'Create team', data: { turbo: false }, class: 'btn btn-primary' %>
     <% else %>
