--- a/app/views/teams/index.turbo_stream.erb
+++ b/app/views/teams/index.turbo_stream.erb
@@ -2,7 +2,7 @@
   <% if other_teams.present? %>
     <%= render 'teams/shared/team_list', teams: @other_teams %>
   <% else %>
-    <div class="flex flex-col gap-6 items-center justify-center py-12">
+    <div class="flex flex-col items-center justify-center gap-6 py-12">
       <p class="prose dark:prose-invert text-soft">No teams found.</p>
     </div>
   <% end %>
