--- a/app/views/teams/index/_membered_teams.html.erb
+++ b/app/views/teams/index/_membered_teams.html.erb
@@ -1,11 +1,11 @@
-<div class="mt-10 pb-6 border-b dark:border-slate-700">
+<div class="pb-6 mt-10 border-b dark:border-slate-700">
   <h1 class="heading">My Team Memberships</h1>
 </div>
 
 <% if membered_teams.present? %>
   <%= render 'teams/shared/team_list', teams: membered_teams %>
 <% else %>
-  <div class="flex flex-col gap-6 items-center justify-center py-12">
+  <div class="flex flex-col items-center justify-center gap-6 py-12">
     <p class="prose dark:prose-invert text-soft">You're not a member of any teams yet.</p>
     <%= link_to 'Find a team', teams_path(tab: 'otherTeamsTab'), class: 'btn btn-white' %>
   </div>
