--- a/app/views/teams/index/_owned_teams.html.erb
+++ b/app/views/teams/index/_owned_teams.html.erb
@@ -1,4 +1,4 @@
-<div class="flex flex-wrap gap-6 items-center justify-between mt-10 pb-6 border-b dark:border-slate-700">
+<div class="flex flex-wrap items-center justify-between gap-6 pb-6 mt-10 border-b dark:border-slate-700">
   <h1 class="heading">My Teams</h1>
   <% if owned_teams.present? %>
     <%= link_to 'New team', new_team_path, class: 'btn btn-primary' %>
@@ -8,7 +8,7 @@
 <% if owned_teams.present? %>
   <%= render 'teams/shared/team_list', teams: owned_teams %>
 <% else %>
-  <div class="flex flex-col gap-6 items-center justify-center py-12">
+  <div class="flex flex-col items-center justify-center gap-6 py-12">
     <p class="prose dark:prose-invert text-soft">You don't have any teams yet.</p>
     <%= link_to 'Create a team', new_team_path, class: 'btn btn-primary' %>
   </div>
