--- a/app/views/teams/shared/_team.html.erb
+++ b/app/views/teams/shared/_team.html.erb
@@ -5,7 +5,7 @@
   </div>
 <% end %>
 
-<div class="flex items-center flex-wrap gap-4">
+<div class="flex flex-wrap items-center gap-4">
   <% if team.photo.attached? %>
     <%= link_to team, data: { turbo: false } do %>
       <%= image_tag team.photo.variant(resize_to_limit: [100, 100]).processed, class: 'size-16 rounded-lg drop-shadow-lg dark:drop-shadow-none object-cover' %>
@@ -18,7 +18,7 @@
     <p class="subheading mb-0.5"><%= link_to team.name, team, data: { turbo: false }, class: 'hover:text-indigo-600 dark:hover:text-indigo-500 transition ease-in-out duration-300' %></p>
 
     <% if team.season_dates? %>
-      <p class="text-soft text-sm mt-1">
+      <p class="mt-1 text-sm text-soft">
         Season <%= team.season_not_started_yet? ? 'starts' : 'started' %> <%= pretty_date(team.season_start_date) %>
       </p>
     <% end %>
@@ -33,7 +33,7 @@
 </div>
 
 <% if show_members && team.any_members_in_common?(current_user) && !current_user.member_of?(team) %>
-  <p class="help-text mt-1">
+  <p class="mt-1 help-text">
     <span>Members you know:</span>
     <%= list(items: team.members_in_common(current_user).map { |user| link_to(user.default_name, team_member_path(team, user), data: { turbo: false }, class: 'btn-link') }).html_safe %>
   </p>
