--- a/app/views/teams/shared/_team_buttons.html.erb
+++ b/app/views/teams/shared/_team_buttons.html.erb
@@ -9,11 +9,11 @@
     <% if team.gender_requirement_met?(current_user) %>
       <%= button_to 'Join team', request.nil? ? join_team_path(team) : team_join_request_path(request), method: request.nil? ? :post : :patch, class: "btn btn-primary #{current_page?(team_path(team)) ? '' : 'btn-sm'}", data: { turbo: false } %>
     <% elsif current_page?(team_path(team)) %>
-      <p class="error-message text-base w-full text-center">You must specify your gender to join this team.</p>
+      <p class="w-full text-base text-center error-message">You must specify your gender to join this team.</p>
     <% end %>
   <% elsif request.pending? %>
     <%= button_to 'Cancel request', cancel_team_join_request_path(request), method: :patch, class: "btn btn-destructive btn-outline #{current_page?(team_path(team)) ? '' : 'btn-sm'}", data: { turbo: false } %>
   <% elsif current_page?(team_path(team)) %>
-    <p class="error-message text-base">You have been blocked from this team.</p>
+    <p class="text-base error-message">You have been blocked from this team.</p>
   <% end %>
 <% end %>
