--- a/app/views/teams/show.html.erb
+++ b/app/views/teams/show.html.erb
@@ -1,18 +1,18 @@
-<div data-controller="tabs" data-tabs-active-class="btn-tab-active" data-tabs-default-tab-value="infoTab" class="max-w-3xl mx-auto px-4 my-16">
+<div data-controller="tabs" data-tabs-active-class="btn-tab-active" data-tabs-default-tab-value="infoTab" class="max-w-3xl px-4 mx-auto my-16">
   <div class="pb-6 text-center">
 
     <%= image_tag @team.photo.variant(resize_to_limit: [150, 150]).processed, class: 'size-28 sm:size-32 md:size-36 rounded-lg drop-shadow-lg dark:drop-shadow-none mx-auto mb-4 object-cover' if @team.photo.attached? %>
 
     <h1 class="heading"><%= @team.name %></h1>
-    <h2 class="text-lg text-slate-700 my-1 dark:text-slate-400">
+    <h2 class="my-1 text-lg text-slate-700 dark:text-slate-400">
       Coach: <%= link_to @team.owner.default_name, team_member_path(@team, @team.owner), class: 'hover:text-indigo-600 dark:hover:text-indigo-500 transition ease-in-out duration-300' %>
     </h2>
 
     <% unless @team.description.blank? %>
-      <p class="prose dark:prose-invert text-center mx-auto"><%= @team.description %></p>
+      <p class="mx-auto prose text-center dark:prose-invert"><%= @team.description %></p>
     <% end %>
 
-    <div class="flex items-center justify-center md:justify-end gap-4 mt-4">
+    <div class="flex items-center justify-center gap-4 mt-4 md:justify-end">
       <%= render 'teams/shared/team_buttons', team: @team %>
       <%= link_to 'Edit personal goals', edit_team_team_membership_path(@team, current_user), data: { turbo: false }, class: 'btn btn-white' %>
     </div>
