--- a/app/views/teams/show.turbo_stream.erb
+++ b/app/views/teams/show.turbo_stream.erb
@@ -1,6 +1,6 @@
 <%= turbo_stream.replace 'teamMembers' do %>
   <%= turbo_frame_tag 'teamMembers' do %>
-    <div class="divide-y dark:divide-slate-700 dark:text-slate-700 mb-10">
+    <div class="mb-10 divide-y dark:divide-slate-700 dark:text-slate-700">
       <%= render 'teams/show/member_list', members: @members %>
     </div>
   <% end %>
