--- a/app/views/teams/show/_join_request.html.erb
+++ b/app/views/teams/show/_join_request.html.erb
@@ -1,9 +1,9 @@
-<div class="flex gap-3 items-center flex-wrap py-3 text-slate-800 dark:text-slate-100">
+<div class="flex flex-wrap items-center gap-3 py-3 text-slate-800 dark:text-slate-100">
   <%= link_to request.user, class: 'group flex gap-3 items-center mr-auto' do %>
     <%= image_tag request.user.avatar.variant(resize_to_limit: [50, 50]).processed, class: 'size-12 rounded-lg drop-shadow-lg dark:drop-shadow-none object-cover' if request.user.avatar.attached? %>
 
     <div>
-      <p class="font-semibold group-hover:text-indigo-600 dark:group-hover:text-indigo-500 transition ease-in-out duration-300"><%= request.user.default_name %></p>
+      <p class="font-semibold transition duration-300 ease-in-out group-hover:text-indigo-600 dark:group-hover:text-indigo-500"><%= request.user.default_name %></p>
       <%= content_tag(:p, request.user.username, class: 'help-text') if request.user.display_name.present? %>
     </div>
   <% end %>
