--- a/app/views/teams/show/_join_requests.html.erb
+++ b/app/views/teams/show/_join_requests.html.erb
@@ -1,16 +1,16 @@
-<div class="mt-10 pb-6 border-b dark:border-slate-700 space-y-2">
+<div class="pb-6 mt-10 space-y-2 border-b dark:border-slate-700">
   <h1 class="heading">Join Requests</h1>
   <p class="text-soft"><%= join_requests.count < 1 ? 'No requests' : pluralize(join_requests.count, 'request') %></p>
 </div>
 
 <% if join_requests.present? %>
-  <div class="divide-y dark:divide-slate-700 dark:text-slate-700 mb-10">
+  <div class="mb-10 divide-y dark:divide-slate-700 dark:text-slate-700">
     <% join_requests.each do |request| %>
       <%= render 'teams/show/join_request', request: request %>
     <% end %>
   </div>
 <% else %>
-  <div class="flex flex-col gap-6 items-center justify-center py-12">
+  <div class="flex flex-col items-center justify-center gap-6 py-12">
     <p class="prose dark:prose-invert text-soft">No new join requests.</p>
   </div>
 <% end %>
