--- a/app/views/teams/show/_rankings_table.html.erb
+++ b/app/views/teams/show/_rankings_table.html.erb
@@ -1,4 +1,4 @@
-<div class="mt-10 mb-3 space-y-2 flex flex-wrap items-end justify-between">
+<div class="flex flex-wrap items-end justify-between mt-10 mb-3 space-y-2">
   <h2 class="subheading">Rankings <%= date_range_description.titlecase %></h2>
   <%= link_to team_path(@team, format: :xlsx, date_range: params[:date_range], start_date: params[:start_date], end_date: params[:end_date]), class: 'btn btn-white gap-2' do %>
     <%= inline_svg_tag 'icons/download.svg', class: 'size-5 shrink-0' %>
@@ -6,31 +6,31 @@
   <% end %>
 </div>
 
-<div data-controller="sort-table" class="relative overflow-x-auto shadow-md dark:shadow-none rounded-lg border border-slate-200 dark:border-slate-700">
-  <table data-sort-table-target="table" class="w-full table-auto overflow-x-auto text-sm text-left rtl:text-right text-soft row-numbers">
+<div data-controller="sort-table" class="relative overflow-x-auto border rounded-lg shadow-md dark:shadow-none border-slate-200 dark:border-slate-700">
+  <table data-sort-table-target="table" class="w-full overflow-x-auto text-sm text-left table-auto rtl:text-right text-soft row-numbers">
     <thead class="text-xs uppercase text-slate-800 dark:text-slate-100 bg-slate-200/70 dark:bg-slate-700/70">
       <tr>
-        <th scope="col" data-action="click->sort-table#sort" data-sort-table-target="th" class="px-6 py-3 whitespace-nowrap hover:cursor-pointer select-none">
+        <th scope="col" data-action="click->sort-table#sort" data-sort-table-target="th" class="px-6 py-3 select-none whitespace-nowrap hover:cursor-pointer">
           <div class="flex items-center">
             Team member
             <%= inline_svg_tag 'icons/arrow-down.svg', class: 'size-3.5 ml-2 transition ease duration-200 hidden' %>
           </div>
         </th>
         <% if team.require_gender? %>
-          <th scope="col" data-action="click->sort-table#sort" data-sort-table-target="th" class="px-6 py-3 whitespace-nowrap hover:cursor-pointer select-none">
+          <th scope="col" data-action="click->sort-table#sort" data-sort-table-target="th" class="px-6 py-3 select-none whitespace-nowrap hover:cursor-pointer">
             <div class="flex items-center">
               Gender
               <%= inline_svg_tag 'icons/arrow-down.svg', class: 'size-3.5 ml-2 transition ease duration-200 hidden' %>
             </div>
           </th>
         <% end %>
-        <th scope="col" data-action="click->sort-table#sort" data-sort-table-target="th defaultSort" data-numeric="true" class="px-6 py-3 whitespace-nowrap hover:cursor-pointer select-none">
+        <th scope="col" data-action="click->sort-table#sort" data-sort-table-target="th defaultSort" data-numeric="true" class="px-6 py-3 select-none whitespace-nowrap hover:cursor-pointer">
           <div class="flex items-center">
             # of miles
             <%= inline_svg_tag 'icons/arrow-down.svg', class: 'size-3.5 ml-2 transition ease duration-200 rotate-180' %>
           </div>
         </th>
-        <th scope="col" data-action="click->sort-table#sort" data-sort-table-target="th" data-numeric="true" class="px-6 py-3 whitespace-nowrap hover:cursor-pointer select-none">
+        <th scope="col" data-action="click->sort-table#sort" data-sort-table-target="th" data-numeric="true" class="px-6 py-3 select-none whitespace-nowrap hover:cursor-pointer">
           <div class="flex items-center">
             # of long runs
             <%= inline_svg_tag 'icons/arrow-down.svg', class: 'size-3.5 ml-2 transition ease duration-200 hidden' %>
@@ -44,11 +44,11 @@
         <tr data-filter-gender-target="row" class="bg-slate-50/85 dark:bg-slate-800/85 hover:bg-slate-200/70 dark:hover:bg-slate-700/70">
           <th scope="row" class="px-6 py-4 font-medium text-slate-800 dark:text-slate-100 whitespace-nowrap">
             <div class="flex items-center">
-              <span class="row-number font-mono mr-4 -ml-1"></span>
+              <span class="mr-4 -ml-1 font-mono row-number"></span>
               <%= link_to team_member_path(team, member), data: { turbo: false }, class: 'group flex gap-2 items-center mr-auto' do %>
                 <%= image_tag member.avatar.variant(resize_to_limit: [50, 50]).processed, class: 'size-9 rounded-md drop-shadow-lg dark:drop-shadow-none object-cover' if member.avatar.attached? %>
                 <div class="flex flex-col-reverse">
-                  <p class="group-hover:text-indigo-600 dark:group-hover:text-indigo-500 transition ease-in-out duration-300"><%= member.default_name %></p>
+                  <p class="transition duration-300 ease-in-out group-hover:text-indigo-600 dark:group-hover:text-indigo-500"><%= member.default_name %></p>
                   <%= content_tag(:p, member == current_user ? 'You' : 'Coach', class: 'help-text') if member.owns?(team) || member == current_user %>
                 </div>
               <% end %>
@@ -74,8 +74,8 @@
         <th scope="row" class="px-6 py-3">Totals</th>
         <% if team.require_gender? %>
           <td class="px-6 py-3">
-            <p data-filter-gender-target="maleTotal" class="whitespace-nowrap text-xs"><%= team.members.where(gender: 'male').count %> male</p>
-            <p data-filter-gender-target="femaleTotal" class="whitespace-nowrap text-xs"><%= team.members.where(gender: 'female').count %> female</p>
+            <p data-filter-gender-target="maleTotal" class="text-xs whitespace-nowrap"><%= team.members.where(gender: 'male').count %> male</p>
+            <p data-filter-gender-target="femaleTotal" class="text-xs whitespace-nowrap"><%= team.members.where(gender: 'female').count %> female</p>
           </td>
         <% end %>
         <td class="px-6 py-3 font-mono"><%= team.miles_in_date_range(date_range) %> <span class="text-xs">mi</span></td>
