--- a/app/views/users/_edit_settings.html.erb
+++ b/app/views/users/_edit_settings.html.erb
@@ -1,4 +1,4 @@
-<div class="mt-10 mb-6 pb-6 border-b dark:border-slate-700 space-y-2">
+<div class="pb-6 mt-10 mb-6 space-y-2 border-b dark:border-slate-700">
   <h1 class="heading">Settings</h1>
   <p class="text-soft">Set your preferences to optimize your experience.</p>
 </div>
@@ -11,11 +11,11 @@
 
   <%= form.fields_for :settings do |settings_form| %>
     <div class="my-6">
-      <h2 class="font-normal text-lg text-slate-700 dark:text-slate-200 mb-2">Contact information</h2>
+      <h2 class="mb-2 text-lg font-normal text-slate-700 dark:text-slate-200">Contact information</h2>
       <p class="text-sm text-slate-600 dark:text-slate-400">Display your contact information to other users on your profile.</p>
     </div>
 
-    <div class="form-group space-y-2">
+    <div class="space-y-2 form-group">
       <div class="flex items-center gap-2">
         <%= settings_form.check_box :email_visible, { checked: @user.show_email?, class: 'form-input-checkbox', data: { restore_defaults_target: 'emailVisible' } }, true, false %>
         <%= settings_form.label :email_visible, 'Show email', class: 'select-none text-sm text-slate-700 dark:text-slate-300' %>
@@ -27,7 +27,7 @@
     </div>
 
     <div class="pt-6 my-6 border-t border-slate-200 dark:border-slate-700">
-      <h2 class="font-normal text-lg text-slate-700 dark:text-slate-200 mb-2">Appearance</h2>
+      <h2 class="mb-2 text-lg font-normal text-slate-700 dark:text-slate-200">Appearance</h2>
       <p class="text-sm text-slate-600 dark:text-slate-400">Choose your preferred theme.</p>
     </div>
 
@@ -37,7 +37,7 @@
     </div>
 
     <div class="pt-6 my-6 border-t border-slate-200 dark:border-slate-700">
-      <h2 class="font-normal text-lg text-slate-700 dark:text-slate-200 mb-2">Notifications</h2>
+      <h2 class="mb-2 text-lg font-normal text-slate-700 dark:text-slate-200">Notifications</h2>
       <p class="text-sm text-slate-600 dark:text-slate-400">Choose which notifications you receive.</p>
     </div>
 
@@ -51,7 +51,7 @@
 
   <div class="pt-6 my-6 border-t border-slate-200 dark:border-slate-700">
     <button type="button" data-action="restore-defaults#restore" class="btn btn-sm btn-white">Restore defaults</button>
-    <p class="help-text my-1">Reset all settings to their defaults for a fresh start.</p>
+    <p class="my-1 help-text">Reset all settings to their defaults for a fresh start.</p>
   </div>
 
   <div class="flex items-center gap-6 mt-10">
