--- a/app/views/users/_runs_filter.html.erb
+++ b/app/views/users/_runs_filter.html.erb
@@ -1,5 +1,5 @@
 <div class="mb-24">
-  <div class="mt-10 mb-6 pb-6 border-b dark:border-slate-700 space-y-2">
+  <div class="pb-6 mt-10 mb-6 space-y-2 border-b dark:border-slate-700">
     <h1 id="runs_title" class="heading">Filter Runs</h1>
     <p class="text-soft">Filter <%= user == current_user ? 'your runs' : 'runs for this user' %> by date.</p>
   </div>
@@ -10,28 +10,28 @@
       <%= select_tag :run_date_range, options_for_select(['This week', 'Last week', 'This month', 'Last month', 'Custom range'], params[:run_date_range]), data: { custom_date_range_target: 'select', action: 'custom-date-range#update custom-date-range#search' }, class: 'form-select' %>
     </div>
 
-    <div class="form-group hidden" data-custom-date-range-target="startDate">
+    <div class="hidden form-group" data-custom-date-range-target="startDate">
       <%= label_tag :run_start_date, 'Start date', class: 'form-label' %>
       <%= date_field_tag :run_start_date, nil, max: Date.yesterday, class: 'form-input', data: { form_validation_target: 'startDate', custom_date_range_target: 'startDateField', action: 'input->form-validation#validateEndDate custom-date-range#search' } %>
     </div>
 
-    <div class="form-group hidden" data-custom-date-range-target="endDate">
+    <div class="hidden form-group" data-custom-date-range-target="endDate">
       <%= label_tag :run_end_date, 'End date', class: 'form-label' %>
       <%= date_field_tag :run_end_date, nil, max: Date.today, class: 'form-input', data: { form_validation_target: 'endDate', custom_date_range_target: 'endDateField', action: 'input->form-validation#validateEndDate custom-date-range#search' } %>
-      <span class="error-message hidden my-1" data-form-validation-target="endDateError">End date must be today or earlier and must be after start date</span>
+      <span class="hidden my-1 error-message" data-form-validation-target="endDateError">End date must be today or earlier and must be after start date</span>
     </div>
   <% end %>
 </div>
 
 <%= turbo_frame_tag 'runs' do %>
-  <div class="mt-10 pb-6 border-b dark:border-slate-700 space-y-2">
+  <div class="pb-6 mt-10 space-y-2 border-b dark:border-slate-700">
     <h1 class="heading">Runs <%= @date_range.titlecase %></h1>
   </div>
-  <div class="divide-y dark:divide-slate-700 dark:text-slate-700 mb-10">
+  <div class="mb-10 divide-y dark:divide-slate-700 dark:text-slate-700">
     <% if @runs.present? %>
       <%= render @runs %>
     <% else %>
-      <div class="flex flex-col gap-6 items-center justify-center py-12">
+      <div class="flex flex-col items-center justify-center gap-6 py-12">
         <p class="prose dark:prose-invert text-soft">No runs found for the selected date range.</p>
       </div>
     <% end %>
