--- a/app/views/users/_runs_list.html.erb
+++ b/app/views/users/_runs_list.html.erb
@@ -1,11 +1,11 @@
-<div class="flex flex-wrap gap-6 items-center justify-between mt-10 pb-6 border-b dark:border-slate-700">
+<div class="flex flex-wrap items-center justify-between gap-6 pb-6 mt-10 border-b dark:border-slate-700">
   <h1 class="heading"><%= @title %></h1>
 </div>
-<div class="divide-y dark:divide-slate-700 dark:text-slate-700 mb-10">
+<div class="mb-10 divide-y dark:divide-slate-700 dark:text-slate-700">
   <% if @runs.present? %>
     <%= render @runs %>
   <% else %>
-    <div class="flex flex-col gap-6 items-center justify-center py-12">
+    <div class="flex flex-col items-center justify-center gap-6 py-12">
       <p class="prose dark:prose-invert text-soft">No runs found for the selected date range.</p>
     </div>
   <% end %>
