--- a/app/views/users/_runs_today.html.erb
+++ b/app/views/users/_runs_today.html.erb
@@ -1,4 +1,4 @@
-<div class="flex flex-wrap gap-6 items-center justify-between mt-10 pb-6 border-b border-slate-200 dark:border-slate-700">
+<div class="flex flex-wrap items-center justify-between gap-6 pb-6 mt-10 border-b border-slate-200 dark:border-slate-700">
   <div class="space-y-2">
     <h1 class="heading">Runs Today</h1>
     <p class="text-soft">Runs <%= user == current_user ? 'you have' : 'this user has' %> gone on today.</p>
@@ -10,13 +10,13 @@
   <% end %>
 </div>
 
-<div class="divide-y dark:divide-slate-700 dark:text-slate-700 mb-10">
+<div class="mb-10 divide-y dark:divide-slate-700 dark:text-slate-700">
   <% if runs_today.present? %>
     <% runs_today.each do |run| %>
       <%= render run %>
     <% end %>
   <% else %>
-    <div class="flex flex-col gap-6 items-center justify-center py-12">
+    <div class="flex flex-col items-center justify-center gap-6 py-12">
       <% if user == current_user %>
         <p class="prose dark:prose-invert text-soft">You haven't gone on any runs yet today.</p>
         <%= link_to 'New run', new_run_path, class: 'btn btn-primary' %>
