--- a/app/views/users/_teams.html.erb
+++ b/app/views/users/_teams.html.erb
@@ -1,4 +1,4 @@
-<div class="flex flex-wrap gap-6 items-center justify-between mt-10 pb-6 border-b border-slate-200 dark:border-slate-700">
+<div class="flex flex-wrap items-center justify-between gap-6 pb-6 mt-10 border-b border-slate-200 dark:border-slate-700">
   <div class="space-y-2">
     <h1 class="heading"><%= user == current_user ? 'Your' : "#{user.default_name}'s" %> Teams</h1>
     <p class="text-soft">Teams <%= user == current_user ? 'you are' : 'this user is' %> the coach of.</p>
@@ -12,7 +12,7 @@
 <% if owned_teams.present? %>
   <%= render 'teams/shared/team_list', teams: owned_teams %>
 <% else %>
-  <div class="flex flex-col gap-6 items-center justify-center py-12">
+  <div class="flex flex-col items-center justify-center gap-6 py-12">
     <% if user == current_user %>
       <p class="prose dark:prose-invert text-soft">You don't have any teams yet.</p>
       <%= link_to 'New run', new_run_path, class: 'btn btn-primary' %>
@@ -22,7 +22,7 @@
   </div>
 <% end %>
 
-<div class="mt-10 pb-6 border-b dark:border-slate-700 space-y-2">
+<div class="pb-6 mt-10 space-y-2 border-b dark:border-slate-700">
   <h1 class="heading"><%= user == current_user ? 'Your' : "#{user.default_name}'s" %> Team Memberships</h1>
   <p class="text-soft">Teams <%= user == current_user ? 'you are' : 'this user is' %> a member of.</p>
 </div>
@@ -30,7 +30,7 @@
 <% if membered_teams.present? %>
   <%= render 'teams/shared/team_list', teams: membered_teams %>
 <% else %>
-  <div class="flex flex-col gap-6 items-center justify-center py-12">
+  <div class="flex flex-col items-center justify-center gap-6 py-12">
     <p class="prose dark:prose-invert text-soft">You're not a member of any teams yet.</p>
     <%= link_to 'Find a team', teams_path, class: 'btn btn-white' %>
   </div>
