--- a/app/views/users/_user_info.html.erb
+++ b/app/views/users/_user_info.html.erb
@@ -1,13 +1,13 @@
 <div class="mb-24">
-  <div class="mt-10 mb-6 pb-6 border-b dark:border-slate-700 space-y-2">
+  <div class="pb-6 mt-10 mb-6 space-y-2 border-b dark:border-slate-700">
     <h1 class="heading">User Info</h1>
     <p class="text-soft">Information and statistics about <%= user == current_user ? 'you' : 'this user' %>.</p>
   </div>
 
-  <div class="grid gap-6 grid-cols-1 lg:grid-cols-2">
+  <div class="grid grid-cols-1 gap-6 lg:grid-cols-2">
     <!-- Total Miles Card -->
-    <div class="bg-slate-50/85 dark:bg-slate-800/85 backdrop-blur-sm rounded-lg shadow-md dark:shadow-none border dark:border-slate-700 p-6">
-      <h2 class="text-lg font-semibold text-slate-700 dark:text-slate-300 mb-6">Total Miles</h2>
+    <div class="p-6 border rounded-lg shadow-md bg-slate-50/85 dark:bg-slate-800/85 backdrop-blur-sm dark:shadow-none dark:border-slate-700">
+      <h2 class="mb-6 text-lg font-semibold text-slate-700 dark:text-slate-300">Total Miles</h2>
       <p class="text-3xl font-bold">
         <%= user.total_miles %>
       </p>
@@ -17,8 +17,8 @@
     </div>
 
     <!-- Time Spent Running Card -->
-    <div class="bg-slate-50/85 dark:bg-slate-800/85 backdrop-blur-sm rounded-lg shadow-md dark:shadow-none border dark:border-slate-700 p-6">
-      <h2 class="text-lg font-semibold text-slate-700 dark:text-slate-300 mb-6">Time Spent Running</h2>
+    <div class="p-6 border rounded-lg shadow-md bg-slate-50/85 dark:bg-slate-800/85 backdrop-blur-sm dark:shadow-none dark:border-slate-700">
+      <h2 class="mb-6 text-lg font-semibold text-slate-700 dark:text-slate-300">Time Spent Running</h2>
       <p class="text-3xl font-bold">
         <%= precise_time_ago(user.total_duration, format: :short) %>
       </p>
@@ -31,12 +31,12 @@
 
 <% if user.show_email? || (user.phone_number? && user.show_phone?) %>
   <div class="mb-24">
-    <div class="mt-10 mb-6 pb-6 border-b dark:border-slate-700 space-y-2">
+    <div class="pb-6 mt-10 mb-6 space-y-2 border-b dark:border-slate-700">
       <h1 class="heading">Contact</h1>
       <p class="text-soft"><%= user == current_user ? 'Your contact information' : 'Contact information for this user' %>.</p>
     </div>
 
-    <div class="block sm:flex space-y-10 sm:space-y-0 sm:items-center sm:justify-around mb-8">
+    <div class="block mb-8 space-y-10 sm:flex sm:space-y-0 sm:items-center sm:justify-around">
       <% if user.show_email? %>
         <div class="space-y-2 text-center">
           <p><%= user.email %></p>
