--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,11 +1,11 @@
-<div data-controller="tabs" data-tabs-active-class="btn-tab-active" data-tabs-default-tab-value="infoTab" class="max-w-3xl mx-auto px-4 my-16">
+<div data-controller="tabs" data-tabs-active-class="btn-tab-active" data-tabs-default-tab-value="infoTab" class="max-w-3xl px-4 mx-auto my-16">
   <div class="pb-6 text-center">
 
     <%= image_tag @user.avatar.variant(resize_to_limit: [150, 150]).processed, class: 'size-28 sm:size-32 md:size-36 rounded-lg drop-shadow-lg dark:drop-shadow-none mx-auto mb-4 object-cover' if @user.avatar.attached? %>
 
     <h1 class="heading"><%= @user.default_name %></h1>
     <% if @user.display_name.present? %>
-      <h2 class="text-lg my-1 text-soft"><%= @user.username %></h2>
+      <h2 class="my-1 text-lg text-soft"><%= @user.username %></h2>
     <% elsif @user == current_user %>
       <p class="mt-1">
         <%= link_to 'Add a display name to your profile', edit_user_registration_path, class: 'text-sm text-soft hover:text-indigo-600 dark:hover:text-indigo-500 transition ease-in-out duration-300' %>
