--- a/app/views/shared/_progress_bar.html.erb
+++ b/app/views/shared/_progress_bar.html.erb
@@ -6,6 +6,8 @@
   lg: 'h-6 rounded-md',
 } %>
 
+<% comparison_classes = (percentage - marker).positive? ? 'z-30 border-r-4 border-yellow-500 rounded-none dark:border-yellow-600' : 'z-10 bg-red-600/30' if local_assigns[:marker] %>
+
 <div>
   <div class="flex items-end justify-between gap-4 my-1">
     <span class="text-sm text-soft"><%= label %></span>
@@ -18,9 +20,9 @@
     </span>
   </div>
   <div class="<%= size_classes[size] %> w-full bg-gray-200 dark:bg-gray-700 relative">
-    <div class="<%= size_classes[size] %> bg-indigo-600 absolute left-0 top-0 z-30" style="width: <%= percentage %>%"></div>
+    <div class="<%= size_classes[size] %> bg-indigo-500 dark:bg-indigo-600 absolute left-0 top-0 z-20 max-w-full" style="width: <%= percentage %>%"></div>
     <% if local_assigns[:marker] %>
-      <div class="<%= size_classes[size] %> bg-red-600/25 absolute left-0 top-0 z-20" style="width: <%= marker %>%"></div>
+      <div class="<%= size_classes[size] + ' ' + comparison_classes %> absolute top-0 left-0 max-w-full" style="width: <%= marker %>%"></div>
     <% end %>
   </div>
 </div>
