--- a/app/views/teams/show/_team_info.html.erb
+++ b/app/views/teams/show/_team_info.html.erb
@@ -55,7 +55,11 @@
       <% else %>
         <%= render 'shared/progress_bar', percentage: team.mileage_goal_progress, label: 'Mileage Goal Progress' %>
 
-        <p class='text-soft text-xs my-1'><%= pluralize(team.miles_remaining_in_goal, 'mile') %> remaining</p>
+        <% if team.mileage_goal_complete? %>
+          <p class='my-1 text-xs text-soft'>Your team met its mileage goal!</p>
+        <% else %>
+          <p class='my-1 text-xs text-soft'><%= pluralize(team.miles_remaining_in_goal, 'mile') %> remaining</p>
+        <% end %>
       <% end %>
     <% else %>
       <p class="text-soft">No mileage goal has been set for this team.</p>
@@ -79,7 +83,11 @@
       <% else %>
         <%= render 'shared/progress_bar', percentage: team.long_run_goal_progress, label: 'Long Run Goal Progress' %>
 
-        <p class='text-soft text-xs my-1'><%= pluralize(team.long_runs_remaining_in_goal, 'long run') %> remaining</p>
+        <% if team.long_run_goal_complete? %>
+          <p class='my-1 text-xs text-soft'>Your team met its long run goal!</p>
+        <% else %>
+          <p class='my-1 text-xs text-soft'><%= pluralize(team.long_runs_remaining_in_goal, 'long run') %> remaining</p>
+        <% end %>
       <% end %>
     <% else %>
       <p class="text-soft">No long run goal has been set for this team.</p>
@@ -88,29 +96,19 @@
 </div>
 
 <!-- Season Progress vs. Mileage Goal Card -->
-<div class="bg-slate-50/85 dark:bg-slate-800/85 backdrop-blur-sm rounded-lg shadow-md dark:shadow-none border dark:border-slate-700 p-6 mt-6">
-  <h2 class="text-lg font-semibold text-slate-700 dark:text-slate-300 mb-6">Season Progress vs. Mileage Goal</h2>
+<div class="p-6 mt-6 border rounded-lg shadow-md bg-slate-50/85 dark:bg-slate-800/85 backdrop-blur-sm dark:shadow-none dark:border-slate-700">
+  <h2 class="mb-6 text-lg font-semibold text-slate-700 dark:text-slate-300">Season Progress vs. Mileage Goal</h2>
   <% if team.mileage_goal? && team.season_in_progress? %>
-    <div class="mb-4">
-      <% if team.meeting_mileage_goal? %>
-        <p>
-          Your team is on track! You're <%= team.season_progress %>% through the season, and you've met <%= team.mileage_goal_progress %>% of your mileage goal.
-        </p>
-      <% elsif team.ahead_of_mileage_goal? %>
-        <p>
-          Your team is advancing! You're <%= team.season_progress %>% through the season, and you've already met <%= team.long_run_goal_progress %>% of your mileage goal.
-        </p>
-      <% else %>
-        <p>
-          Your team is falling behind! You're <%= team.season_progress %>% through the season, but you've only met <%= team.mileage_goal_progress %>% of your mileage goal.
-        </p>
-      <% end %>
-    </div>
+    <p class="mb-4"><%= team.mileage_goal_progress_message %></p>
 
     <%= render 'shared/progress_bar', percentage: team.mileage_goal_progress, label: 'Mileage Goal Progress', marker: team.season_progress, size: :lg %>
 
-    <p class='text-soft text-xs my-1'>
-      Your team has <%= pluralize(team.days_remaining_in_season, 'day') %> to finish the remaining <%= pluralize(team.miles_remaining_in_goal, 'mile') %> of your goal.
+    <p class='my-1 text-xs text-soft'>
+      <% if team.mileage_goal_complete? %>
+        Your team met its <%= team.mileage_goal %> long run goal with <%= pluralize(team.days_remaining_in_season, 'day') %> to spare!
+      <% else %>
+        Your team has <%= pluralize(team.days_remaining_in_season, 'day') %> to finish the remaining <%= pluralize(team.miles_remaining_in_goal, 'mile') %> of your goal.
+      <% end %>
     </p>
   <% elsif team.season_not_started_yet? %>
     <p class='text-soft'>Season hasn't started yet.</p>
@@ -124,29 +122,19 @@
 </div>
 
 <!-- Season Progress vs. Long Run Goal Card -->
-<div class="bg-slate-50/85 dark:bg-slate-800/85 backdrop-blur-sm rounded-lg shadow-md dark:shadow-none border dark:border-slate-700 p-6 mt-6">
-  <h2 class="text-lg font-semibold text-slate-700 dark:text-slate-300 mb-6">Season Progress vs. Long Run Goal</h2>
+<div class="p-6 mt-6 border rounded-lg shadow-md bg-slate-50/85 dark:bg-slate-800/85 backdrop-blur-sm dark:shadow-none dark:border-slate-700">
+  <h2 class="mb-6 text-lg font-semibold text-slate-700 dark:text-slate-300">Season Progress vs. Long Run Goal</h2>
   <% if team.long_run_goal? && team.season_in_progress? %>
-    <div class="mb-4">
-      <% if team.meeting_long_run_goal? %>
-        <p>
-          Your team is on track! You're <%= team.season_progress %>% through the season, and you've met <%= team.long_run_goal_progress %>% of your long run goal.
-        </p>
-      <% elsif team.ahead_of_long_run_goal? %>
-        <p>
-          Your team is advancing! You're <%= team.season_progress %>% through the season, and you've already met <%= team.long_run_goal_progress %>% of your long run goal.
-        </p>
-      <% else %>
-        <p>
-          Your team is falling behind! You're <%= team.season_progress %>% through the season, but you've only met <%= team.long_run_goal_progress %>% of your long run goal.
-        </p>
-      <% end %>
-    </div>
+    <p class="mb-4"><%= team.long_run_goal_progress_message %></p>
 
     <%= render 'shared/progress_bar', percentage: team.long_run_goal_progress, label: 'Long Run Goal Progress', marker: team.season_progress, size: :lg %>
 
-    <p class='text-soft text-xs my-1'>
-      Your team has <%= pluralize(team.days_remaining_in_season, 'day') %> to finish the remaining <%= pluralize(team.long_runs_remaining_in_goal, 'long run') %> of your goal.
+    <p class='my-1 text-xs text-soft'>
+      <% if team.long_run_goal_complete? %>
+        Your team met its <%= team.long_run_goal %> long run goal with <%= pluralize(team.days_remaining_in_season, 'day') %> to spare!
+      <% else %>
+        Your team has <%= pluralize(team.days_remaining_in_season, 'day') %> to finish the remaining <%= pluralize(team.long_runs_remaining_in_goal, 'long run') %> of your goal.
+      <% end %>
     </p>
   <% elsif team.season_not_started_yet? %>
     <p class='text-soft'>Season hasn't started yet.</p>
