add 'view your personal progress' link on _team_info

--- a/app/views/teams/show/_team_info.html.erb
+++ b/app/views/teams/show/_team_info.html.erb
@@ -3,6 +3,8 @@
   <p class="text-soft">Information and statistics about this team.</p>
 </div>
 
+<p class="mb-2 text-right"><%= link_to 'View your personal progress', team_member_path(team, current_user), class: 'btn-link text-xs' %></p>
+
 <!-- Season Dates Card -->
 <div class="p-6 mb-6 border rounded-lg shadow-md bg-slate-50/85 dark:bg-slate-800/85 backdrop-blur-sm dark:shadow-none dark:border-slate-700">
   <h2 class="mb-6 text-lg font-semibold text-slate-700 dark:text-slate-300">Season Dates</h2>
