change progress_bar sizes

--- a/app/views/shared/_progress_bar.html.erb
+++ b/app/views/shared/_progress_bar.html.erb
@@ -2,8 +2,7 @@
 
 <% size_classes = {
   sm: 'h-2 rounded-full',
-  md: 'h-4 rounded',
-  lg: 'h-6 rounded-md',
+  lg: 'h-4 rounded',
 } %>
 
 <% comparison_classes = (percentage - marker).positive? ? 'z-30 border-r-4 border-yellow-500 rounded-none dark:border-yellow-600' : 'z-10 bg-red-600/30' if local_assigns[:marker] %>
